# FinEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
examples/simple/: CMakeLists.txt
examples/simple/src/: main.cpp
examples/simple/src/Objects/: Colorful.h
examples/simple/src/States/: TestState.cpp  TestState.h
include/: FinEngine.h
include/FinEngine/: FinEngineAPI.h  Graphics.h  Log.h
include/FinEngine/Core/: FinBasic.h  FinGame.h  FinGroup.h  FinState.h
include/FinEngine/Platform/: Graphics.h  System.h  Windowing.h
include/FinEngine/Rendering/: Renderer2D.h
src/FinEngine/Core/: FinBasic.cpp  FinGame.cpp  FinState.cpp
src/FinEngine/Graphics/: Graphics_Desktop.cpp
src/FinEngine/Platform/Audio/: Audio.cpp  Audio.h
src/FinEngine/Platform/Audio/Wii/: Audio_Wii.cpp  Audio_Wii.h
src/FinEngine/Platform/Graphics/: Graphics.cpp  Graphics.h
src/FinEngine/Platform/Graphics/GL/: Graphics_GL.cpp  Graphics_GL.h
src/FinEngine/Platform/Graphics/GX/: Graphics_GX.cpp  Graphics_GX.h
src/FinEngine/Platform/System/: System.cpp  System.h
src/FinEngine/Platform/System/Desktop/: System_Desktop.cpp  System_Desktop.h
src/FinEngine/Platform/System/Wii/: System_Wii.cpp  System_Wii.h
src/FinEngine/Platform/Windowing/: Windowing.cpp
src/FinEngine/Platform/Windowing/Desktop/: Windowing_Desktop.cpp  Windowing_Desktop.h
src/FinEngine/Platform/Windowing/Wii/: Windowing_Wii.cpp  Windowing_Wii.h
src/FinEngine/Rendering/: Renderer2D.cpp
